--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -58,7 +58,8 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="16dp"
-
+        android:visibility="invisible"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/image_gallery"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="49dp" />
