--- a/app/src/main/res/layout/fragment_gamecode.xml
+++ b/app/src/main/res/layout/fragment_gamecode.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/gamecode_fragment"
     >
 
     <ImageView
-        android:id="@+id/larger_image"
+        android:id="@+id/gamecode_image"
         android:layout_width="match_parent"
         android:layout_height="426dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,11 +28,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@id/larger_image"
+        app:layout_constraintTop_toBottomOf="@id/gamecode_image"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/image_description"
+        android:id="@+id/gamecode_description"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginBottom="104dp"
