--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -12,15 +12,14 @@
         android:layout_height="30dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="52dp"
-        android:background="@color/cool_dark"
-        android:contentDescription="settings"
+        android:background="#0F9D58"
+        android:src="@android:drawable/ic_menu_help"
         android:textColor="#ffffff"
+        android:contentDescription="settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toEndOf="@+id/points"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_settings"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/points"
@@ -51,8 +50,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_profile_page"
         />
-
-
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginEnd="184dp"
+        android:rotation="0"
+        android:text="Comment"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
