--- a/app/src/main/res/menu/bottom_navigation_profile_page.xml
+++ b/app/src/main/res/menu/bottom_navigation_profile_page.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/map_nav"
+        android:id="@+id/back"
         android:icon="@android:drawable/ic_menu_mapmode"
-        android:title="@string/map_nav" />
+        android:title="@string/back_button" />
     <item
         android:id="@+id/profile_qr_nav"
         android:icon="@android:drawable/ic_menu_myplaces"
         android:title="Profile QR" />
     <item
-        android:id="@+id/home_nav"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home" />
+        android:id="@+id/scan_nav"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="@string/scanner_nav" />
     <item
         android:id="@+id/search_nav"
         android:icon="@android:drawable/ic_menu_search"
