--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,4 +4,12 @@
         android:id="@+id/edit_profile"
         android:title="Edit Profile" />
 
+    <item
+        android:id="@+id/scan_sign_in"
+        android:title="Scan To Sign-in" />
+
+    <item
+        android:id="@+id/select_delete"
+        android:title="Select to Delete" />
+
 </menu>
